// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`works 1`] = `
<div>
  ["{\\"o\\":1,\\"p\\":10}"]
  {"o":1,"p":10}
</div>
`;

exports[`works 2`] = `
<div>
  ["{\\"o\\":1,\\"p\\":10}","{\\"o\\":2,\\"p\\":10}"]
  {"o":2,"p":10}
</div>
`;

exports[`works 3`] = `
<div>
  ["{\\"o\\":1,\\"p\\":10}","{\\"o\\":2,\\"p\\":10}","{\\"o\\":2,\\"p\\":20}"]
  {"o":2,"p":20}
</div>
`;
